tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__nameof.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"nameof variable\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Nameof(
                    (),
                    VariableGet(
                        Variable(
                            "variable",
                        ),
                    ),
                ),
            ),
        ),
    ],
)
