tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__not-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"not not true\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Not(
                    (),
                    Not(
                        (),
                        Boolean(
                            True,
                        ),
                    ),
                ),
            ),
        ),
    ],
)
