tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__not.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"not true\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Not(
                    (),
                    Boolean(
                        True,
                    ),
                ),
            ),
        ),
    ],
)
