tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__null.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"null\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Null(
                    (),
                ),
            ),
        ),
    ],
)
