tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__number-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1.0\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Number(
                    1.0,
                ),
            ),
        ),
    ],
)
