tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__number-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"-1.24\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Number(
                    -1.24,
                ),
            ),
        ),
    ],
)
